4교시,정적 크롤링, csv 파일에 출력해보기, 네이트 날씨 정보 확인3

--- a/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T03:19:07.969643Z",
-     "start_time": "2024-07-19T03:19:07.795764Z"
+     "end_time": "2024-07-19T03:32:43.988125Z",
+     "start_time": "2024-07-19T03:32:33.793238Z"
     }
    },
    "cell_type": "code",
@@ -112,7 +112,7 @@
     "import urllib.request\n",
     "\n",
     "# csv 파일을 저장할 물리 경로 지정.\n",
-    "csvName = \"D:/PyTestBusanIt501/pythonProject3/ch9_crawling/static_bs4/news_weather_datetime_240719.csv\"\n",
+    "csvName = \"D:/PyTestBusanIt501/pythonProject3/ch9_crawling/static_bs4/news_weather_datetime_240719_2.csv\"\n",
     "\n",
     "# with 구문은, 파일 객체를 자동으로 반납하는 기능이 포함. \n",
     "with open(csvName, \"w\", newline=\"\", encoding=\"UTF-8\") as csvfile:\n",
@@ -162,24 +162,14 @@
     "        csvwriter.writerow(weather_list)\n",
     "    \n",
     "    #1초마다 , 진행하기. 10초씩 쉬기.     \n",
-    "    time.sleep(10)\n",
+    "    time.sleep(1)\n",
+    "print(\"save Ok\")\n",
     "    \n",
     "    \n"
    ],
    "id": "7338fa4f5bc9b0aa",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27℃\n",
-      "78%\n",
-      "4.0mm\n",
-      "남서 4.5 m/s\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "metadata": {},
