4교시,정적 크롤링, csv 파일에 출력해보기, 네이트 날씨 정보 확인3

--- a/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T03:32:43.988125Z",
-     "start_time": "2024-07-19T03:32:33.793238Z"
+     "end_time": "2024-07-19T03:34:03.256069Z",
+     "start_time": "2024-07-19T03:33:53.094402Z"
     }
    },
    "cell_type": "code",
@@ -168,8 +168,16 @@
     "    \n"
    ],
    "id": "7338fa4f5bc9b0aa",
-   "outputs": [],
-   "execution_count": 6
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "save Ok\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
