5교시,정적 크롤링, csv 파일에 출력해보기, 네이트 뉴스 관련, 1 조회, 2 디비에 저장

--- a/pythonProject3/ch9_crawling/static_bs4/test5_nateNews.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test5_nateNews.ipynb
@@ -9,8 +9,190 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "\t# <div class=\"mduSubjectList\">\t\n",
+    "\t# \t<div class=\"mlt01\">\n",
+    "\t# \t\t<a href=\"//news.nate.com/view/20240719n16586?mid=n0100\"  class=\"lt1\">\n",
+    "\t# \t\t\t<span class=\"ib\">\n",
+    "\t# \t\t\t\t<em class=\"mediatype\">\n",
+    "\t# \t\t\t\t\t\t\t\t\t\t\t\t<img src=\"//thumbnews.nateimg.co.kr/news90///news.nateimg.co.kr/orgImg/na/2024/07/19/6768831_high.jpg\" width=\"90\" onerror=\"ImgError(this,'//news.nateimg.co.kr/orgImg/na/2024/07/19/6768831_high.jpg','90');\" alt=\"\" />\n",
+    "\t# \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</em>\n",
+    "\t# \t\t\t</span>\t\t\t\t<span class=\"tb\">\n",
+    "\t# \t\t\t\t\t\t\t\t\t<h2 class=\"tit\">尹 탄핵청원 청문회 격돌…고성·몸싸움에 野 의원 부상</h2>\n",
+    "\t# \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t유상범 국민의힘 간사 등이 19일 오전 서울 여의도 국회 법제사법위원회에서 열린 '윤석열 대통령 탄핵소추안 즉각 발의 요청에 관한 청원 관련 1차 청문회'에서 정청래 위...\n",
+    "\t# \t\t\t\t\t\t\t\t\t\t\t\t\t\t</span>\n",
+    "\t# \t\t</a>\n",
+    "\t# \t\t<span class=\"medium\">뉴스1\t\t\t\t\t\t\t\t\t<em>07-19 13:44</em>\n",
+    "\t# \t\t\t\t\t\t</span>\n",
+    "\t# \t</div>\n",
+    "\t# </div>\t\n",
+    "\t# \n",
+    "\t# \t\t<div class=\"mduSubjectList\">\t\n",
+    "\t# \t<div class=\"mlt01\">\n",
+    "\t# \t\t<a href=\"//news.nate.com/view/20240719n08852?mid=n0100\"  class=\"lt1\">\n",
+    "\t# \t\t\t<span class=\"ib\">"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T04:54:40.925977Z",
+     "start_time": "2024-07-19T04:52:40.249934Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "import bs4\n",
+    "import urllib.request\n",
+    "\n",
+    "# 네이트 실시간 뉴스 정보 -> 콘솔, 조금 코드를 수정해서, mysql 자동으로 저장.\n",
+    "\n",
+    "nateUrl = \"https://news.nate.com/recent?mid=n0100\"\n",
+    "htmlObject = urllib.request.urlopen(nateUrl)\n",
+    "webPage = htmlObject.read()\n",
+    "bsObject = bs4.BeautifulSoup(webPage, 'html.parser')\n",
+    "\n",
+    "while True:\n",
+    "    # div.mlt01 -> 정보가 20개,\n",
+    "    # 각 기사의 모델 , 속성 포맷이 같음.\n",
+    "    # tag_list<mlt01>\n",
+    "    tag_list = bsObject.findAll('div', {'class': 'mlt01'})\n",
+    "\n",
+    "    print('###### 실시간 뉴스 속보 #######')\n",
+    "    num = 1\n",
+    "    for tag in tag_list:\n",
+    "        # 각 기사에서 , 특정 정보를 추출하는 작업.\n",
+    "        subject = tag.find('h2', {'class': 'tit'}).text\n",
+    "        link = tag.find('a', {'class': 'lt1'})['href']\n",
+    "        pressAndDate = tag.find('span', {'class': 'medium'}).text\n",
+    "        pressAndDate.replace('\\t', ' ')\n",
+    "        pressAndDate.replace('\\n', '')\n",
+    "\n",
+    "        if len(pressAndDate.split()) == 3:\n",
+    "            press, pDate, pTime = pressAndDate.split()\n",
+    "        elif len(pressAndDate.split()) == 4:\n",
+    "            press1, press2, pDate, pTime = pressAndDate.split()\n",
+    "            press = press1+press2\n",
+    "        else:\n",
+    "            continue\n",
+    "\n",
+    "        print('(', num, ')', subject)\n",
+    "        print('\\t https:'+link, press, pDate, pTime)\n",
+    "        num += 1\n",
+    "\n",
+    "    time.sleep(60)"
+   ],
+   "id": "16dd95aa078523a9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###### 실시간 뉴스 속보 #######\n",
+      "( 1 ) 수원 천천동 화서역푸르지오더에듀포레 129㎡ 7억7000만원에 거래\n",
+      "\t https://news.nate.com/view/20240719n17930?mid=n0100 조선비즈 07-19 13:51\n",
+      "( 2 ) 배용준 내세워 300억대 코인사기…檢, 퀸비코인 일당 구속기소\n",
+      "\t https://news.nate.com/view/20240719n17636?mid=n0100 조선비즈 07-19 13:51\n",
+      "( 3 ) [포토타임]프랑스 시내 순찰하는 한국 경찰, 올림픽 기간 31명 파견\n",
+      "\t https://news.nate.com/view/20240719n08486?mid=n0100 중앙일보 07-19 13:51\n",
+      "( 4 ) '우연일까' 김다솜, 사랑에 진심인 영어 교사 김혜지로 돌아온다\n",
+      "\t https://news.nate.com/view/20240719n17927?mid=n0100 스포츠투데이 07-19 13:51\n",
+      "( 5 ) [화보] 아일리원(ILY:1) 하나 ''페이스 오브 몽골'서 서투른 몽골어 귀엽게 봐주셔서 다행'\n",
+      "\t https://news.nate.com/view/20240719n17926?mid=n0100 bnt뉴스 07-19 13:51\n",
+      "( 6 ) 수익성 높인 넷플릭스…\"올해 말, 오징어게임 IP 게임 출시할 것\"\n",
+      "\t https://news.nate.com/view/20240719n17892?mid=n0100 디지털데일리 07-19 13:51\n",
+      "( 7 ) '음주운전 물의' 김상혁, 대리운전 시작 \"무사 귀가 서비스할 것\" [종합]\n",
+      "\t https://news.nate.com/view/20240719n15816?mid=n0100 스포츠조선 07-19 13:51\n",
+      "( 8 ) [MD포토] 노현승 '마무리는 내가'\n",
+      "\t https://news.nate.com/view/20240719n17923?mid=n0100 마이데일리 07-19 13:51\n",
+      "( 9 ) 금호석유화학, 국제 친환경 인증 'ISCC PLUS' 획득 제품군 확대\n",
+      "\t https://news.nate.com/view/20240719n17922?mid=n0100 아시아투데이 07-19 13:51\n",
+      "( 10 ) 고성 오가는 '대통령 탄핵청원' 청문회\n",
+      "\t https://news.nate.com/view/20240719n17921?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 11 ) [속보] 현대건설, 2분기 영업이익 1473억…전년대비 41.3%↓\n",
+      "\t https://news.nate.com/view/20240719n17920?mid=n0100 머니S 07-19 13:51\n",
+      "( 12 ) 현대건설, 상반기 매출 17조 1665억원 기록…동기比 30.1%↑\n",
+      "\t https://news.nate.com/view/20240719n17919?mid=n0100 포인트경제 07-19 13:51\n",
+      "( 13 ) 변협, '쯔양 과거 유출 의혹' 변호사 직권조사 개시\n",
+      "\t https://news.nate.com/view/20240719n17918?mid=n0100 SBS 07-19 13:51\n",
+      "( 14 ) 증인선거 거부한 임성근 전 사단장\n",
+      "\t https://news.nate.com/view/20240719n17917?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 15 ) 미 공화 전대, 트럼프 피격 희생 전 의용소방대장 유품 입 맞추며 추모\n",
+      "\t https://news.nate.com/view/20240719n17916?mid=n0100 SBS 07-19 13:51\n",
+      "( 16 ) 라온텍 수주공시 - MicroLED 백플레인 웨이퍼 공급 28.2억원 (매출액대비  26.23 %)\n",
+      "\t https://news.nate.com/view/20240719n17915?mid=n0100 한국경제 07-19 13:51\n",
+      "( 17 ) 증인선거 거부한 임성근 전 사단장\n",
+      "\t https://news.nate.com/view/20240719n17914?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 18 ) 에스파 윈터 '하의실종 공항패션'[엑's HD포토]\n",
+      "\t https://news.nate.com/view/20240719n17913?mid=n0100 엑스포츠뉴스 07-19 13:51\n",
+      "( 19 ) 제2의 '불법도박' 사건?…컵스, 스즈키 통역사 해임에 \"도박 절대 NO\"\n",
+      "\t https://news.nate.com/view/20240719n12246?mid=n0100 스포츠서울 07-19 13:51\n",
+      "( 20 ) 윤환 계양구청장, 집중호우 취약지 현장 점검\n",
+      "\t https://news.nate.com/view/20240719n17911?mid=n0100 연합뉴스보도자료 07-19 13:51\n",
+      "###### 실시간 뉴스 속보 #######\n",
+      "( 1 ) 수원 천천동 화서역푸르지오더에듀포레 129㎡ 7억7000만원에 거래\n",
+      "\t https://news.nate.com/view/20240719n17930?mid=n0100 조선비즈 07-19 13:51\n",
+      "( 2 ) 배용준 내세워 300억대 코인사기…檢, 퀸비코인 일당 구속기소\n",
+      "\t https://news.nate.com/view/20240719n17636?mid=n0100 조선비즈 07-19 13:51\n",
+      "( 3 ) [포토타임]프랑스 시내 순찰하는 한국 경찰, 올림픽 기간 31명 파견\n",
+      "\t https://news.nate.com/view/20240719n08486?mid=n0100 중앙일보 07-19 13:51\n",
+      "( 4 ) '우연일까' 김다솜, 사랑에 진심인 영어 교사 김혜지로 돌아온다\n",
+      "\t https://news.nate.com/view/20240719n17927?mid=n0100 스포츠투데이 07-19 13:51\n",
+      "( 5 ) [화보] 아일리원(ILY:1) 하나 ''페이스 오브 몽골'서 서투른 몽골어 귀엽게 봐주셔서 다행'\n",
+      "\t https://news.nate.com/view/20240719n17926?mid=n0100 bnt뉴스 07-19 13:51\n",
+      "( 6 ) 수익성 높인 넷플릭스…\"올해 말, 오징어게임 IP 게임 출시할 것\"\n",
+      "\t https://news.nate.com/view/20240719n17892?mid=n0100 디지털데일리 07-19 13:51\n",
+      "( 7 ) '음주운전 물의' 김상혁, 대리운전 시작 \"무사 귀가 서비스할 것\" [종합]\n",
+      "\t https://news.nate.com/view/20240719n15816?mid=n0100 스포츠조선 07-19 13:51\n",
+      "( 8 ) [MD포토] 노현승 '마무리는 내가'\n",
+      "\t https://news.nate.com/view/20240719n17923?mid=n0100 마이데일리 07-19 13:51\n",
+      "( 9 ) 금호석유화학, 국제 친환경 인증 'ISCC PLUS' 획득 제품군 확대\n",
+      "\t https://news.nate.com/view/20240719n17922?mid=n0100 아시아투데이 07-19 13:51\n",
+      "( 10 ) 고성 오가는 '대통령 탄핵청원' 청문회\n",
+      "\t https://news.nate.com/view/20240719n17921?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 11 ) [속보] 현대건설, 2분기 영업이익 1473억…전년대비 41.3%↓\n",
+      "\t https://news.nate.com/view/20240719n17920?mid=n0100 머니S 07-19 13:51\n",
+      "( 12 ) 현대건설, 상반기 매출 17조 1665억원 기록…동기比 30.1%↑\n",
+      "\t https://news.nate.com/view/20240719n17919?mid=n0100 포인트경제 07-19 13:51\n",
+      "( 13 ) 변협, '쯔양 과거 유출 의혹' 변호사 직권조사 개시\n",
+      "\t https://news.nate.com/view/20240719n17918?mid=n0100 SBS 07-19 13:51\n",
+      "( 14 ) 증인선거 거부한 임성근 전 사단장\n",
+      "\t https://news.nate.com/view/20240719n17917?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 15 ) 미 공화 전대, 트럼프 피격 희생 전 의용소방대장 유품 입 맞추며 추모\n",
+      "\t https://news.nate.com/view/20240719n17916?mid=n0100 SBS 07-19 13:51\n",
+      "( 16 ) 라온텍 수주공시 - MicroLED 백플레인 웨이퍼 공급 28.2억원 (매출액대비  26.23 %)\n",
+      "\t https://news.nate.com/view/20240719n17915?mid=n0100 한국경제 07-19 13:51\n",
+      "( 17 ) 증인선거 거부한 임성근 전 사단장\n",
+      "\t https://news.nate.com/view/20240719n17914?mid=n0100 연합뉴스 07-19 13:51\n",
+      "( 18 ) 에스파 윈터 '하의실종 공항패션'[엑's HD포토]\n",
+      "\t https://news.nate.com/view/20240719n17913?mid=n0100 엑스포츠뉴스 07-19 13:51\n",
+      "( 19 ) 제2의 '불법도박' 사건?…컵스, 스즈키 통역사 해임에 \"도박 절대 NO\"\n",
+      "\t https://news.nate.com/view/20240719n12246?mid=n0100 스포츠서울 07-19 13:51\n",
+      "( 20 ) 윤환 계양구청장, 집중호우 취약지 현장 점검\n",
+      "\t https://news.nate.com/view/20240719n17911?mid=n0100 연합뉴스보도자료 07-19 13:51\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 39\u001B[0m\n\u001B[0;32m     36\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124m https:\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m+\u001B[39mlink, press, pDate, pTime)\n\u001B[0;32m     37\u001B[0m     num \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[1;32m---> 39\u001B[0m \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m60\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8ec2953eec7be762"
   }
  ],
  "metadata": {
