0722, 1교시 동적 크롤링 셀레니움 설치및 공식문서 퀵 가이드 보기

--- a/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
+++ b/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
@@ -11,6 +11,9 @@
     }
    },
    "source": [
+    "# pip install selenium\n",
+    "# 공식 문서\n",
+    "# https://www.selenium.dev/documentation/\n",
     "\n",
     "from re import I\n",
     "from selenium import webdriver\n",
