--- a/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
+++ b/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
@@ -6,14 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-19T08:36:44.842302Z",
-     "start_time": "2024-07-19T08:36:34.901999Z"
+     "start_time": "2024-07-22T00:49:40.463092Z"
     }
    },
    "source": [
     "# pip install selenium\n",
     "# 공식 문서\n",
     "# https://www.selenium.dev/documentation/\n",
+    "# 깃허브 전체 소스 \n",
+    "# https://github.com/SeleniumHQ/seleniumhq.github.io/blob/trunk//examples/python/tests/hello/hello_selenium.py\n",
     "\n",
     "from re import I\n",
     "from selenium import webdriver\n",
@@ -85,7 +86,7 @@
     "driver.close()\n"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": null
   },
   {
    "metadata": {},
