0722, 2교시 동적 크롤링 셀레니움, 코드 설명 및 예제 코드 수정

--- a/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
+++ b/pythonProject3/ch9_crawling/dynamic_selenium/test2.ipynb
@@ -24,19 +24,30 @@
     "import urllib.request\n",
     "import os\n",
     "\n",
-    "search_words = [\"강동원\" ]\n",
+    "# 크롬 , 이미지를 검색하는 공간. \n",
+    "# 검색할 키워드 목록 리스트, \n",
+    "search_words = [\"강동원\" , \"사과\",\"바나나\"]\n",
+    "# 웹브라우저 크롬 드라이버 로드 \n",
     "driver = webdriver.Chrome()  #chromedriver.exe -> 가져 옴\n",
+    "# 이미지 경로를 추출. \n",
     "driver.get(\"https://www.google.co.kr/imghp?hl=ko&tab=wi&authuser=0&ogbl\")\n",
     "# assert \"Python\" in driver.title\n",
+    "# getcwd : 현재 작업 폴더를 의미. \n",
     "current_path = os.getcwd() # 저장 경로\n",
+    "# 검색어 , 예) 강동원 , 크로코 농구\n",
     "for search_word in search_words:\n",
-    "    elem = driver.find_element(By.NAME,\"q\")  # 검색탕의 검색엔진을 찾는 코드\n",
+    "    elem = driver.find_element(By.NAME,\"q\")  # 검색어의 검색엔진을 찾는 코드\n",
+    "    # 이미지 검색어 창을 비우기\n",
     "    elem.clear()\n",
+    "    # 검색창에 자동으로 강동원이라고 쓰기\n",
     "    elem.send_keys(search_word)  # 해당 검색엔진에 글자를 입력\n",
+    "    # 엔터 치는 명령어 \n",
     "    elem.send_keys(Keys.RETURN)\n",
+    "    # 1초 간격으로 스크롤 대기시간, \n",
     "    SCROLL_PAUSE_TIME = 1\n",
     "\n",
     "    # Get scroll height\n",
+    "    # 자바스크립트의 내장 객체이용. \n",
     "    last_height = driver.execute_script(\n",
     "        \"return document.body.scrollHeight\")  #브라우져 높이를 확인 가능(자바스크립트)\n",
     "\n",
@@ -52,35 +63,56 @@
     "        new_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
     "        if new_height == last_height:  # 스크롤이 끝까지 내려가서 더이상 내릴 것이 없을 때\n",
     "            try:\n",
+    "                # 스크롤을 끝까지 내렸음. 그리고, 혹시나, 더보기 같은 버튼이 있을 때\n",
+    "                # 클릭하라고, 버튼의 클래스의 요소를 선택해서,\n",
     "                driver.find_elements(By.CSS_SELECTOR,\".mye4qd\").click()\n",
     "            except:\n",
     "                break\n",
     "        last_height = new_height\n",
     "        \n",
     "\n",
-    "\n",
+    "    # 조회한 이미지들의 테이블 형식의 각 요소 클래스명 \n",
     "    images = driver.find_elements(By.CSS_SELECTOR,\".H8Rx8c\")\n",
     "\n",
+    "# 강동원\n",
     "    folder_name = search_word\n",
     "    #해당 이미지 이름과 동일한 폴더 생성\n",
+    "    # 해당 경로에 폴더가 없다면\n",
     "    if not os.path.isdir(folder_name):  # 없으면 새로 생성하는 조건문\n",
+    "        # 새로 만들기\n",
     "        os.mkdir(folder_name)\n",
     "\n",
+    "#   임의로 사진 100장만 뽑을려고 , 상태 변수를 지정\n",
     "    count = 1\n",
+    "    # \n",
     "    for image in images:\n",
     "        if count > 100:\n",
+    "        # if count > len(images):\n",
     "            break\n",
     "        try:\n",
+    "            # 한장의 이미지를 클릭 , 명령어\n",
     "            image.click()\n",
+    "            # 인터넷속도, 이미지 로드 시간이 걸려서, 3초 대기.  \n",
     "            time.sleep(3)\n",
-    "           \n",
+    "           # 해당 경로는 수시로 바뀜. 핵심. \n",
+    "#             각 이미지를 클릭시 , 해당 이미지의 경로 추출, \n",
+    "# copy -> xpath 추출. 패턴을 파악. \n",
+    "# \n",
+    "# //*[@id=\"Sva75c\"]/div[2]/div[2]/div/div[2]/c-wiz/div/div[3]/div[1]/a/img[1]\n",
+    "# \n",
+    "# //*[@id=\"Sva75c\"]/div[2]/div[2]/div/div[2]/c-wiz/div/div[3]/div[1]/a/img[1]\n",
+    "# \n",
+    "# //*[@id=\"Sva75c\"]/div[2]/div[2]/div/div[2]/c-wiz/div/div[3]/div[1]/a/img[1]\n",
     "            imgUrl =  driver.find_element(By.XPATH,'//*[@id=\"Sva75c\"]/div[2]/div[2]/div/div[2]/c-wiz/div/div[3]/div[1]/a/img[1]').get_attribute(\"src\")\n",
+    "            #이미지 다운로드, \n",
+    "            # 해당 경로의 이미지 url 주소에서, 현재 내가 지정한 경로에 다른이름으로 저장.\n",
     "            urllib.request.urlretrieve(\n",
     "                imgUrl,\n",
     "                folder_name + \"/\" + search_word + \".\" + str(count) + \".jpg\")\n",
     "            count = count + 1\n",
     "        except:\n",
     "            pass\n",
+    "    # 해당 드라이버의 처음으로 돌아가기.    \n",
     "    driver.back()\n",
     "\n",
     "driver.close()\n"
