--- a/pythonProject3/ch9_crawling/dynamic_selenium/test_actions.ipynb
+++ b/pythonProject3/ch9_crawling/dynamic_selenium/test_actions.ipynb
@@ -2,19 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-07-22T01:48:20.900414Z",
+     "start_time": "2024-07-22T01:48:20.894360Z"
+    }
    },
+   "source": "# https://github.com/SeleniumHQ/seleniumhq.github.io/blob/trunk/examples/python/tests/actions_api/test_actions.py\n",
    "outputs": [],
-   "source": "# https://github.com/SeleniumHQ/seleniumhq.github.io/blob/trunk/examples/python/tests/actions_api/test_actions.py\n"
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-22T00:48:07.675007Z",
-     "start_time": "2024-07-22T00:48:07.669328Z"
+     "end_time": "2024-07-22T01:48:22.198993Z",
+     "start_time": "2024-07-22T01:48:20.904416Z"
     }
    },
    "cell_type": "code",
@@ -25,6 +29,9 @@
     "from selenium.webdriver.common.actions.action_builder import ActionBuilder\n",
     "from selenium.webdriver.common.by import By\n",
     "\n",
+    "#추가\n",
+    "from selenium import webdriver\n",
+    "driver = webdriver.Chrome()\n",
     "\n",
     "def test_pauses(driver):\n",
     "    driver.get('https://selenium.dev/selenium/web/mouse_interaction.html')\n",
@@ -58,21 +65,52 @@
     "    ActionBuilder(driver).clear_actions()\n",
     "\n",
     "    ActionChains(driver).key_down('a').perform()\n",
-    "\n",
+    "    print(clickable.get_attribute('value')[0])\n",
+    "    print(clickable.get_attribute('value')[1])\n",
     "    assert clickable.get_attribute('value')[0] == \"A\"\n",
     "    assert clickable.get_attribute('value')[1] == \"a\""
    ],
    "id": "7041eb0d4c845f28",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T01:48:26.325421Z",
+     "start_time": "2024-07-22T01:48:22.198993Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": [
+    "test_pauses(driver)\n",
+    "test_releases_all(driver)"
+   ],
+   "id": "8170232721f5fb51",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "a\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T01:48:26.330542Z",
+     "start_time": "2024-07-22T01:48:26.327425Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "8170232721f5fb51"
+   "id": "c613023a62f41f32",
+   "outputs": [],
+   "execution_count": 11
   }
  ],
  "metadata": {
