--- a/pythonProject3/ch9_crawling/dynamic_selenium/test_mouse.ipynb
+++ b/pythonProject3/ch9_crawling/dynamic_selenium/test_mouse.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-07-22T01:49:08.938807Z",
+     "start_time": "2024-07-22T01:49:08.936664Z"
+    }
    },
-   "outputs": [],
    "source": [
     ""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-22T00:49:01.195360Z",
-     "start_time": "2024-07-22T00:49:01.062228Z"
+     "end_time": "2024-07-22T01:49:12.238435Z",
+     "start_time": "2024-07-22T01:49:08.952768Z"
     }
    },
    "cell_type": "code",
@@ -28,6 +32,9 @@
     "from selenium.webdriver.common.actions.mouse_button import MouseButton\n",
     "from selenium.webdriver.common.by import By\n",
     "\n",
+    "from selenium import webdriver\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
     "\n",
     "def test_click_and_hold(driver):\n",
     "    driver.get('https://selenium.dev/selenium/web/mouse_interaction.html')\n",
@@ -186,15 +193,28 @@
    ],
    "id": "e54a40609226d297",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T01:49:14.399873Z",
+     "start_time": "2024-07-22T01:49:12.238673Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "test_click_and_hold(driver)",
+   "id": "61973351a242868a",
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "61973351a242868a"
+   "source": "test_back_click_ab(driver)",
+   "id": "ad38d6f0396d0c67"
   }
  ],
  "metadata": {
